# Project-Eastern-Spirit

./: .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/: Application.h  Init.h  InputSystem.h
Engine/include/Common/: Animation.h  Common.h  FileSystem.h  Math.h  RAIIContainers.h
Engine/include/Components/: Camera.h  Colliders.h  Health.h  Hitbox.h  Hurtbox.h  KinematicBody.h  MapManager.h  ParticleSystem.h  Sprite.h  Sprite3D.h  SpriteAnimator.h  StaticBody.h  TextBox.h  TextBoxAnimator.h  Tilemap.h  Valuable.h
Engine/include/Core/: Animation.h  Common.h  Input.h  Math.h  RAIIContainers.h  Util.h
Engine/include/Detail/: InputSystem.h  PhysicsSystem.h  RenderSystem.h  Util.h
Engine/include/Graphics/: AnimatorBuilder.h  Font.h  RenderSystem.h  Texture.h  TileSet.h  Window.h
Engine/src/: Application.cpp  Init.cpp  InputSystem.cpp
Engine/src/Common/: FileSystem.cpp  Math.cpp
Engine/src/Components/: Camera.cpp  Colliders.cpp  Health.cpp  KinematicBody.cpp  ParticleSystem.cpp  Sprite.cpp  Sprite3D.cpp  SpriteAnimator.cpp  StaticBody.cpp  TextBox.cpp  TextBoxAnimator.cpp  Tilemap.cpp
Engine/src/Core/: FileSystem.cpp  Math.cpp
Engine/src/Detail/: InputSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp
Engine/src/Graphics/: AnimatorBuilder.cpp  Font.cpp  RenderSystem.cpp  Texture.cpp  TileSet.cpp  Window.cpp
Game/: CMakeLists.txt
Game/include/: Game.h
Game/include/Controllers/: Player.h
Game/src/: Game.cpp  main.cpp
Game/src/Controllers/: Player.cpp
